--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vite-electron-builder",
+  "name": "markdown-notes",
   "private": true,
+  "author": "Marcello Lopes",
   "engines": {
     "node": ">=v16.13",
     "npm": ">=8.1"
@@ -26,27 +27,29 @@
     "typecheck": "npm run typecheck:main && npm run typecheck:preload && npm run typecheck:renderer"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@vitejs/plugin-vue": "2.2.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "@vue/test-utils": "2.0.0-rc.18",
     "cross-env": "7.0.3",
     "dts-for-context-bridge": "0.7.1",
     "electron": "17.0.0",
     "electron-builder": "22.14.13",
     "electron-devtools-installer": "3.2.0",
-    "eslint": "8.8.0",
-    "eslint-plugin-vue": "8.4.1",
+    "eslint": "^8.8.0",
     "happy-dom": "2.31.1",
     "nano-staged": "0.5.0",
     "playwright": "1.18.1",
     "simple-git-hooks": "2.7.0",
     "typescript": "4.5.5",
     "vite": "2.7.13",
-    "vitest": "0.2.8",
-    "vue-tsc": "0.31.2"
+    "vitest": "0.2.8"
   },
   "dependencies": {
     "electron-updater": "4.6.5",
-    "vue": "3.2.30"
+    "eslint-config-prettier": "^8.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
