--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -8,6 +8,8 @@
     "strict": true,
     "isolatedModules": true,
 
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "types" : ["node"],
 
     "baseUrl": ".",
